// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Компонент <Circle /> рендерится без ошибок без буквы 1`] = `
<div
  className="content "
>
  <div
    className="
          text
          text_type_input
          text_color_input
          mb-4
          absolute
          head 
          element
        "
  />
  <div
    className="circle   default"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="
          text
          text_type_input
          text_color_input
          mt-4 
          absolute
          tail30 
          element
        "
  />
</div>
`;

exports[`Компонент <Circle /> рендерится без ошибок в состоянии changing 1`] = `
<div
  className="content "
>
  <div
    className="
          text
          text_type_input
          text_color_input
          mb-4
          absolute
          head 
          element
        "
  />
  <div
    className="circle   changing"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="
          text
          text_type_input
          text_color_input
          mt-4 
          absolute
          tail30 
          element
        "
  />
</div>
`;

exports[`Компонент <Circle /> рендерится без ошибок в состоянии default 1`] = `
<div
  className="content "
>
  <div
    className="
          text
          text_type_input
          text_color_input
          mb-4
          absolute
          head 
          element
        "
  />
  <div
    className="circle   default"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="
          text
          text_type_input
          text_color_input
          mt-4 
          absolute
          tail30 
          element
        "
  />
</div>
`;

exports[`Компонент <Circle /> рендерится без ошибок в состоянии modified 1`] = `
<div
  className="content "
>
  <div
    className="
          text
          text_type_input
          text_color_input
          mb-4
          absolute
          head 
          element
        "
  />
  <div
    className="circle   modified"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="
          text
          text_type_input
          text_color_input
          mt-4 
          absolute
          tail30 
          element
        "
  />
</div>
`;

exports[`Компонент <Circle /> рендерится без ошибок с head 1`] = `
<div
  className="content "
>
  <div
    className="
          text
          text_type_input
          text_color_input
          mb-4
          absolute
          head 
          string
        "
  >
    head
  </div>
  <div
    className="circle   default"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="
          text
          text_type_input
          text_color_input
          mt-4 
          absolute
          tail30 
          element
        "
  />
</div>
`;

exports[`Компонент <Circle /> рендерится без ошибок с index 1`] = `
<div
  className="content "
>
  <div
    className="
          text
          text_type_input
          text_color_input
          mb-4
          absolute
          head 
          element
        "
  />
  <div
    className="circle   default"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  >
    0
  </p>
  <div
    className="
          text
          text_type_input
          text_color_input
          mt-4 
          absolute
          tail60 
          element
        "
  />
</div>
`;

exports[`Компонент <Circle /> рендерится без ошибок с react-элементом в head 1`] = `
<div
  className="content "
>
  <div
    className="
          text
          text_type_input
          text_color_input
          mb-4
          absolute
          head 
          element
        "
  >
    <div
      className="content "
    >
      <div
        className="
          text
          text_type_input
          text_color_input
          mb-4
          absolute
          head 
          element
        "
      />
      <div
        className="circle  small default"
      >
        <p
          className="text text_type_circle text_color_input letter"
        />
      </div>
      <p
        className="text text_type_input text_color_input mt-4 absolute index"
      />
      <div
        className="
          text
          text_type_input
          text_color_input
          mt-4 
          absolute
          tail30 
          element
        "
      />
    </div>
  </div>
  <div
    className="circle   default"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="
          text
          text_type_input
          text_color_input
          mt-4 
          absolute
          tail30 
          element
        "
  />
</div>
`;

exports[`Компонент <Circle /> рендерится без ошибок с react-элементом в tail 1`] = `
<div
  className="content "
>
  <div
    className="
          text
          text_type_input
          text_color_input
          mb-4
          absolute
          head 
          element
        "
  />
  <div
    className="circle   default"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="
          text
          text_type_input
          text_color_input
          mt-4 
          absolute
          tail30 
          element
        "
  >
    <div
      className="content "
    >
      <div
        className="
          text
          text_type_input
          text_color_input
          mb-4
          absolute
          head 
          element
        "
      />
      <div
        className="circle  small default"
      >
        <p
          className="text text_type_circle text_color_input letter"
        />
      </div>
      <p
        className="text text_type_input text_color_input mt-4 absolute index"
      />
      <div
        className="
          text
          text_type_input
          text_color_input
          mt-4 
          absolute
          tail30 
          element
        "
      />
    </div>
  </div>
</div>
`;

exports[`Компонент <Circle /> рендерится без ошибок с tail 1`] = `
<div
  className="content "
>
  <div
    className="
          text
          text_type_input
          text_color_input
          mb-4
          absolute
          head 
          element
        "
  />
  <div
    className="circle   default"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="
          text
          text_type_input
          text_color_input
          mt-4 
          absolute
          tail30 
          string
        "
  >
    tail
  </div>
</div>
`;

exports[`Компонент <Circle /> рендерится без ошибок с буквами 1`] = `
<div
  className="content "
>
  <div
    className="
          text
          text_type_input
          text_color_input
          mb-4
          absolute
          head 
          element
        "
  />
  <div
    className="circle   default"
  >
    <p
      className="text text_type_circle text_color_input letter"
    >
      A
    </p>
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="
          text
          text_type_input
          text_color_input
          mt-4 
          absolute
          tail30 
          element
        "
  />
</div>
`;

exports[`Компонент <Circle /> рендерится без ошибок с пропсом isSmall ===  true 1`] = `
<div
  className="content "
>
  <div
    className="
          text
          text_type_input
          text_color_input
          mb-4
          absolute
          head 
          element
        "
  />
  <div
    className="circle  small default"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="
          text
          text_type_input
          text_color_input
          mt-4 
          absolute
          tail30 
          element
        "
  />
</div>
`;
